# observability-auditor

./: .gitignore  LICENSE  README.es.md  README.md
audit-api/: .env.example  README.md  pyproject.toml
audit-api/src/: cli.py  config.py  models.py  orchestrator.py
audit-api/src/agents/: __init__.py  anomaly_detection.py  auto_tags.py  base.py  host_groups.py  management_zones.py  manual_tags.py  notifications.py  oneagent.py  ownership.py  rum.py  security_context.py  slos.py  synthetic.py
audit-api/src/analyzer/: gemini_analyzer.py
audit-api/src/client/: dynatrace.py  gemini.py
audit-api/src/renderer/: html_renderer.py
audit-api/src/renderer/templates/: report.html.j2
audit-api/src/scoring/: engine.py
audit-api/src/storage/: history.py
audit-api/tests/: test_config.py  test_dynatrace_client.py  test_gemini_analyzer.py  test_html_renderer.py  test_models.py  test_orchestrator.py  test_scoring.py  test_storage.py
audit-api/tests/test_agents/: test_oneagent.py
audit-mcp/: CLAUDE.md  README.md  mcp-config.example.json
audit-mcp/agents/: 01_oneagent_activegate.md  02_host_groups.md  03_management_zones.md  04_auto_tags.md  05_manual_tags.md  06_ownership.md  07_security_context.md  08_rum.md  09_synthetic_monitors.md  10_anomaly_detection.md  11_problem_notifications.md  12_slos.md  13_problem_history.md  14_vulnerabilities.md  15_kubernetes.md
audit-mcp/scoring/: rules.md
audit-mcp/templates/: report.html
