[project]
name = "observability-auditor"
version = "0.1.0"
description = "Dynatrace observability auditor with parallel agents and AI analysis"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]

[project.scripts]
audit = "src.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests against real Dynatrace tenant"]

[tool.ruff]
target-version = "py312"
